--- a/resources/l10n/hi.lproj/Localizable.strings
+++ b/resources/l10n/hi.lproj/Localizable.strings
@@ -297,7 +297,7 @@
 "Screen showing AltTab" = "स्क्रीन जिसमे ऑल्टटैब हो";
 
 /*No comment provided by engineer.*/
-"Select next window" = "अगली विंडो चुनो";
+"Select next window" = "अगली विंडो चुन";
 
 /*No comment provided by engineer.*/
 "Select previous window" = "पिछली विंडो चुनो";
